# cppserver

./: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  run-release.sh
client/: AnswerHandler.cpp  AnswerHandler.hh  BThread.hpp  Babel.pro  BabelImgPack.qrc  CMakeLists.txt  CallClient.cpp  CallClient.hh  ICall.hh  Makefile  PacketCreator.cpp  PacketCreator.hh  PacketHandler.cpp  PacketHandler.hh  addcontact.cpp  addcontact.h  addcontact.ui  babel.cpp  babel.h  babel.ui  callhost.cpp  callhost.h  channelmanager.cpp  channelmanager.h  clicklabel.cpp  clicklabel.h  config.cpp  config.h  config.ui  configstylesheet.cpp  configstylesheet.h  configstylesheet.ui  connectdiag.cpp  connectdiag.h  connectdiag.ui  contactlist.cpp  contactlist.h  contactname.cpp  contactname.h  convers.cpp  (+19 more)
client/audio/: AudioData.hh  AudioException.cpp  AudioException.hh  AudioManager.cpp  AudioManager.hh  IAudio.hh  IAudioCodec.hh  OpusCodec.cpp  OpusCodec.hh  OpusException.cpp  OpusException.hh  PortAudio.cpp  PortAudio.hh  PortAudioException.cpp  PortAudioException.hh  compile  main.cpp
client/lib/opus-1.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  Opus.cbp  Opus.sln  Opus.vcxproj  Opus.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
client/lib/opus-1.1/Opus.dir/Debug/Opus.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Opus.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
client/lib/opus-1.1/celt/: stack_alloc.h
client/lib/opus-1.1/lib/: Opus.lib
client/lib/opus-1.1/lib/Debug/: Opus.lib
client/lib/opus-1.1/win32/VS2010/Win32/Debug/: celt.lib  opus.lib  silk_common.lib  silk_fixed.lib  silk_float.lib  test_opus_api.exp  test_opus_api.ilk  test_opus_api.lib  test_opus_decode.exp  test_opus_decode.ilk  test_opus_decode.lib  test_opus_encode.exp  test_opus_encode.ilk  test_opus_encode.lib
client/lib/opus-1.1/win32/VS2010/Win32/Debug/celt/: vc120.idb
client/lib/opus-1.1/win32/VS2010/Win32/Debug/celt/celt.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
client/lib/opus-1.1/win32/VS2010/Win32/Debug/opus/: vc120.idb
client/lib/opus-1.1/win32/VS2010/Win32/Debug/opus/opus.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
client/lib/opus-1.1/win32/VS2010/Win32/Debug/opus_demo/opus_demo.tlog/: opus_demo.lastbuildstate
client/lib/opus-1.1/win32/VS2010/Win32/Debug/silk_common/: vc120.idb
client/lib/opus-1.1/win32/VS2010/Win32/Debug/silk_common/silk_common.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
client/lib/opus-1.1/win32/VS2010/Win32/Debug/silk_fixed/: vc120.idb
client/lib/opus-1.1/win32/VS2010/Win32/Debug/silk_fixed/silk_fixed.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
client/lib/opus-1.1/win32/VS2010/Win32/Debug/silk_float/: vc120.idb
client/lib/opus-1.1/win32/VS2010/Win32/Debug/silk_float/silk_float.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
client/lib/opus-1.1/win32/VS2010/Win32/Debug/test_opus_api/: vc120.idb
client/lib/opus-1.1/win32/VS2010/Win32/Debug/test_opus_api/test_opus_api.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test_opus_api.write.1u.tlog
client/lib/opus-1.1/win32/VS2010/Win32/Debug/test_opus_decode/: vc120.idb
client/lib/opus-1.1/win32/VS2010/Win32/Debug/test_opus_encode/: vc120.idb
client/lib/opus-1.1/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog
client/lib/opus-1.1/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
client/lib/opus-1.1/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.read.1.tlog
client/lib/opus-1.1/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
client/lib/opus-1.1/x64/Test/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  custombuild.command.1.tlog  custombuild.write.1.tlog
client/lib/opus-1.1/x64/Test/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog
client/lib/opus-1.1/x64/Toto/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
client/lib/opus-1.1/x64/Toto/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.write.1.tlog
client/lib/portaudio/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  portaudio.cbp  portaudio.sln  portaudio.vcxproj  portaudio.vcxproj.filters  portaudio_static.vcxproj  portaudio_static_x86.lib  portaudio_x86.dll.resource.txt  portaudio_x86.exp  portaudio_x86.ilk  portaudio_x86.lib
client/lib/portaudio/Debug/: portaudio_static_x86.lib  portaudio_x86.exp  portaudio_x86.ilk  portaudio_x86.lib
client/lib/portaudio/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
client/lib/portaudio/portaudio.dir/Debug/portaudio.tlog/: CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  portaudio.write.1u.tlog
client/lib/portaudio/portaudio_static.dir/Debug/portaudio_static.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog  portaudio_static.lastbuildstate
client/lib/portaudio/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
client/lib/portaudio/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
includes/: babel-server.hpp  cmake_install.cmake
server/: Makefile  (+1 more)
(+147 files in other folders)
